--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
+        "algolia/algoliasearch-client-php": "^2.7",
         "fideloper/proxy": "^4.0",
         "goldspecdigital/laravel-eloquent-uuid": "^8.0",
         "laravel/framework": "^8.0",
