--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=34d6512ec70e9a29fed2",
+    "/css/app.css": "/css/app.css?id=22c01537fd7aaaef811e"
 }
